@@ -23,6 +23,8 @@ endif::[]
 
 https://github.com/elastic/apm-agent-go/compare/v2.0.0...main[View commits]
 
+- Fetch initial server version async to prevent blocking NewTracer for 10 seconds {pull}1239[#(1239)]
+
 [[release-notes-2.x]]
 === Go Agent version 2.x
 
